--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
         Correo electrónico: davidmahecha295@gmail.com<br>
         Correo institucional: dsmahechav@unadvirtual.edu.co
     </p>
+
+    <a href="fase2/design.html">Ir a design</a>
 </body>
 </html>
