--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         Correo institucional: dsmahechav@unadvirtual.edu.co
     </p>
 
-    <a href="fase2/design.html">Ir a design</a>
+    <a href="fase2/design.html">Ir a design</a><br>
+    <a href="fase3/index.html">Fase 3</a>
 </body>
 </html>
