--- a/fase3/tema1.html
+++ b/fase3/tema1.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html>
 <header>
-	<link rel="stylesheet" type="text/css" href="librerias/flexboxgrid-6.3.1/css/flexboxgrid.min.css">
-    <link rel="stylesheet" href="css/css.css">
-	<meta charset="utf-8">
-	<style type="text/css">
-    b{
-        /* color: white; */
-    }
-	</style>
-	<title>Unidad 1- Fase 2 - Diseño y construcción</title>
+    <link rel="stylesheet" type="text/css" href="librerias/flexboxgrid-6.3.1/css/flexboxgrid.min.css">
+    <link rel="stylesheet" href="css/estilos.css">
+    <meta charset="utf-8">
+    <title>Unidad 1- Fase 2 - Diseño y construcción</title>
 </header>
 <body>
+
+<h1 class="titulo-principal">Frameworks CSS y Posicionamiento Web</h1>
+
 <nav class="menu-area">
     <ul>
         <li>
@@ -94,7 +92,7 @@
                 &lt;/div&lt;
             </pre>
 
-            <img src="grid.png">
+            <img src="../imagenes/grid.png">
             <h3>Botones de Bootstrap</h3>
             Para crear un botón tienes que usar la clase btn. Dentro de los botones bootstrap ha creado una serie de tipos:
             <pre>
@@ -119,7 +117,7 @@
                 <!-- Botón con énfasis en un link  -->
                 &lt;button type="button" class="btn btn-link">Link&lt;/button&lt;
             </pre>
-            <img src="botones.png">
+            <img src="../imagenes/botones.png">
             <h3>Alertas</h3>
             Las alertas sirven para mostrar un mensaje al usuario. Como pasa con los botones, las alertas tienen varios tipos:
             <pre>
@@ -148,17 +146,17 @@
                   Contenido de la alerta
                 &lt;/div>
             </pre>
-            <img src="alerta.png">
+            <img src="../imagenes/alerta.png">
         </div>
         <b>Codingpotions (2019). Tutorial Bootstrap en español. Guía completa. Recuperado de https://codingpotions.com/desarrollo-web-boostrap</b>
     </div>
     <div class="col-md-3">
-        <aside>
+        <aside class="seccion-redes">
             <div class="fb-page" data-href="https://www.facebook.com/UniversidadUNAD" data-tabs="timeline" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/UniversidadUNAD" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/UniversidadUNAD">Universidad Nacional Abierta y a Distancia - UNAD Colombia</a></blockquote></div>
         </aside>
     </div>
     <div class="col-md-12 seccion-footer">
-        <footer>David Mahecha, todos los derechos reservados ©</footer>
+        <footer>David Mahecha - UNAD</footer>
     </div>
 </div>
 
