--- a/fase3/tema2.html
+++ b/fase3/tema2.html
@@ -2,14 +2,14 @@
 <html>
 <header>
     <link rel="stylesheet" type="text/css" href="librerias/flexboxgrid-6.3.1/css/flexboxgrid.min.css">
-    <link rel="stylesheet" href="css/css.css">
+    <link rel="stylesheet" href="css/estilos.css">
     <meta charset="utf-8">
-    <style type="text/css">
-
-    </style>
     <title>Unidad 1- Fase 2 - Diseño y construcción</title>
 </header>
 <body>
+
+<h1 class="titulo-principal">Frameworks CSS y Posicionamiento Web</h1>
+
 <nav class="menu-area">
     <ul>
         <li>
@@ -102,7 +102,7 @@
                 &lt;/div>
             </pre>
 
-            <img src="gridfoundation.png">
+            <img src="../imagenes/gridfoundation.png">
             <h3>Botones de Foundation</h3>
             Para crear un botón tienes que usar la clase button. Dentro de los botones bootstrap ha creado una serie de tipos:
             <pre>
@@ -114,7 +114,7 @@
                 &lt;button type="button" class="success button">Save&lt;/button>
                 &lt;button type="button" class="alert button">Delete&lt;/button>
             </pre>
-            <img src="buttonfoundation.png">
+            <img src="../imagenes/buttonfoundation.png">
             <h3>Alertas</h3>
             Las alertas sirven para mostrar un mensaje al usuario. Como pasa con los botones, las alertas tienen varios tipos:
             <pre>
@@ -134,17 +134,17 @@
                   Contenido de la alerta
                 &lt;/div>
             </pre>
-            <img src="alertfoundation.png">
+            <img src="../imagenes/alertfoundation.png">
         </div>
         <b>ZURB. Foundation for Sites. Recuperado de https://get.foundation/sites/docs/callout.html#coloring</b>
     </div>
     <div class="col-md-3">
-        <aside>
+        <aside class="seccion-redes">
             <div class="fb-page" data-href="https://www.facebook.com/UniversidadUNAD" data-tabs="timeline" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/UniversidadUNAD" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/UniversidadUNAD">Universidad Nacional Abierta y a Distancia - UNAD Colombia</a></blockquote></div>
         </aside>
     </div>
     <div class="col-md-12 seccion-footer">
-        <footer>David Mahecha, todos los derechos reservados ©</footer>
+        <footer>David Mahecha - UNAD</footer>
     </div>
 </div>
 
