--- a/fase3/recursos1.html
+++ b/fase3/recursos1.html
@@ -2,16 +2,19 @@
 <html>
 <header>
 	<link rel="stylesheet" type="text/css" href="librerias/flexboxgrid-6.3.1/css/flexboxgrid.min.css">
-    <link rel="stylesheet" href="css/css.css">
+    <link rel="stylesheet" href="css/estilos.css">
 	<meta charset="utf-8">
 	<style type="text/css">
-	h1,h3{
-		color: white;
-	}  
+        h1,h3{
+            color: white;
+        }
 	</style>
 	<title>Unidad 1- Fase 2 - Diseño y construcción</title>
 </header>
 <body>
+
+<h1 class="titulo-principal">Frameworks CSS y Posicionamiento Web</h1>
+
 <nav class="menu-area">
     <ul>
         <li>
@@ -66,12 +69,12 @@
         </div>
     </div>
     <div class="col-md-3">
-        <aside>
+        <aside class="seccion-redes">
             <div class="fb-page" data-href="https://www.facebook.com/UniversidadUNAD" data-tabs="timeline" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/UniversidadUNAD" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/UniversidadUNAD">Universidad Nacional Abierta y a Distancia - UNAD Colombia</a></blockquote></div>
         </aside>
     </div>
     <div class="col-md-12 seccion-footer">
-        <footer>David Mahecha, todos los derechos reservados ©</footer>
+        <footer>David Mahecha - UNAD</footer>
     </div>
 </div>
 
