--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="keywords" content="Frameworks CSS, Posicionamiento Web, SEO, UNAD">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Proyecto Diseño de Sitios Web</title>
 </head>
 <body>
     <h1>Proyecto de sitio Web 2021 I PERIODO COMPLEMENTARIO 8-03</h1>
-    <h3>David Mahecha, Ingeniería en Sistemas, 2021-06-15</h3>
+    <h2>David Mahecha, Ingeniería en Sistemas, 2021-06-15</h2>
     <p>
         Número de celular: 322601904<br>
         Correo electrónico: davidmahecha295@gmail.com<br>
@@ -17,5 +18,6 @@
 
     <a href="fase2/design.html">Ir a design</a><br>
     <a href="fase3/index.html">Fase 3</a>
+    <a href="fase4/index.html">Fase 4</a>
 </body>
 </html>
